<resources>
    <string name="app_name">Snako</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="card">Cart shop</string>
    <string name="profile">Profile</string>
    <string name="categories">All Categories</string>
    <string name="products">Products</string>
    <string name="Morning">Good Morning,</string>
    <string name="Search_hint">Try Lays Classic</string>
    <string name="Offer">Offers of the day</string>
    <string name="Product">Products</string>
    <string name="Piece">Piece</string>
    <string name="Package">Package</string>
    <string name="Add_to_cart">Add to cart</string>
    <string name="Fav_Product">Favorites products</string>
    <string name="Orders">Orders list</string>
    <string name="Total_Del">Total + Del service</string>
    <string name="Confirm_order">Confirm order</string>
    <string name="btn_view">View</string>
    <string name="btn_logout">Logout</string>
    <string name="Order_list">My order list</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="About_app">About application</string>
    <string name="About_dev">About developer</string>
    <string name="Share_app">Share app</string>
    <string name="Add_sugg">Add sugg</string>
    <string name="Added_to_cart">Added to cart</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="create_account_text">Don\'t have an account? Create one</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Full_name">Full Name</string>
    <string name="Registration">Registration</string>
    <string name="Already">Already have an account !</string>
</resources>
