<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HomeFragmentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/lays_logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/notification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_notification"
                android:tint="@color/colorPrimary" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/TextMorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Morning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Logo"
            android:fontFamily="@font/elmessiri_medium"
            android:textSize="15sp"
            android:textColor="@color/colorAppText2" />

        <TextView
            android:id="@+id/TextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/elmessiri_medium"
            android:text="Mariam"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/TextMorning"
            app:layout_constraintTop_toBottomOf="@id/Logo" />

        <EditText
            android:id="@+id/Search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/search_box_shape"
            android:fontFamily="@font/elmessiri_medium"
            android:hint="@string/Search_hint"
            android:padding="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextName"
            android:drawableRight="@drawable/ic_search"
            android:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/TextOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/elmessiri_medium"
            android:text="@string/Offer"
            android:textColor="@color/colorAppText"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/OfferRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextOffer" />

        <TextView
            android:id="@+id/TextProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/elmessiri_medium"
            android:text="@string/Product"
            android:textColor="@color/colorAppText"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OfferRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ProductRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextProduct" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>