<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ProductConstraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/ProductImage"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:src="@drawable/lays_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/ProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="Twix Cookies and Creme"
                android:textColor="@color/colorAppText"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProductImage" />

            <TextView
                android:id="@+id/ProductCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="Sweets"
                android:textColor="@color/colorAppText"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProductName" />

            <TextView
                android:id="@+id/ProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="2.98$"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProductCategory" />

            <Button
                android:id="@+id/btnMin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_icrement"
                android:text="-"
                android:textColor="@color/colorAppText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProductPrice" />

            <TextView
                android:id="@+id/TextProductNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/btnMin"
                app:layout_constraintTop_toBottomOf="@+id/ProductPrice" />

            <TextView
                android:id="@+id/TextItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="@string/Piece"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/TextProductNum"
                app:layout_constraintTop_toBottomOf="@+id/ProductPrice" />

            <Button
                android:id="@+id/btnMax"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_icrement"
                android:text="+"
                android:textColor="@color/colorAppText"
                app:layout_constraintStart_toEndOf="@+id/TextItem"
                app:layout_constraintTop_toBottomOf="@+id/ProductPrice" />

            <Button
                android:id="@+id/btnMinPackage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_icrement"
                android:text="-"
                android:textColor="@color/colorAppText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMin" />

            <TextView
                android:id="@+id/TextPackageNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/btnMinPackage"
                app:layout_constraintTop_toBottomOf="@+id/TextProductNum" />

            <TextView
                android:id="@+id/TextPackage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/elmessiri_medium"
                android:text="@string/Package"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/TextPackageNum"
                app:layout_constraintTop_toBottomOf="@+id/TextItem" />

            <Button
                android:id="@+id/btnMaxPackage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_icrement"
                android:text="+"
                android:textColor="@color/colorAppText"
                app:layout_constraintStart_toEndOf="@+id/TextPackage"
                app:layout_constraintTop_toBottomOf="@+id/btnMax" />

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_login_shape"
                android:fontFamily="@font/elmessiri_medium"
                android:padding="5dp"
                android:text="@string/Add_to_cart"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/btnMaxPackage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>